triangle div fix overlap

--- a/imports/ui/stylesheets/monitor.less
+++ b/imports/ui/stylesheets/monitor.less
@@ -49,6 +49,11 @@ div#monitor {
     #PA { font-size: @font-size-l; }
     #break_div, #shift_detail, #hour_active { font-size: @font-size-m; }
     #hour_active, #shift_active, #hour_shift { font-size: @font-size-s; }
+// triangle na bar div more narrow
+    #bar_div, #triangle_div {
+        margin-left: @font-size-m * .5;
+        margin-right: @font-size-m * .5;
+    }
 // hour bar_div_value
     #triangle {
         font-size: @font-size-m;
